# LVM_lagoon_scripts

./: README.md  RL_Te_calc.ipynb  __init__.py  annular_binning.ipynb  cli.py  dap_output.py  dust_correction.ipynb  dust_correction.py  fitting_lines.ipynb  integrated_flux.ipynb  line_fitting.py  lvm-dap-gen-out-mod.ipynb  normalization.py  pipeline.py  plots_for_m8_letter_paper2.ipynb  pyneb_analysis.py  pyproject.toml  test_pipeline.py
